[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy"
repository = "https://github.com/alloy-rs/alloy"
exclude = ["benches/", "tests/"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-consensus = { version = "0.1.0", default-features = false, path = "crates/consensus" }
alloy-contract = { version = "0.1.0", default-features = false, path = "crates/contract" }
alloy-eips = { version = "0.1.0", default-features = false, path = "crates/eips" }
alloy-eip7547 = { version = "0.1.0", default-features = false, path = "crates/eip7547" }
alloy-genesis = { version = "0.1.0", default-features = false, path = "crates/genesis" }
alloy-json-rpc = { version = "0.1.0", default-features = false, path = "crates/json-rpc" }
alloy-network = { version = "0.1.0", default-features = false, path = "crates/network" }
alloy-node-bindings = { version = "0.1.0", default-features = false, path = "crates/node-bindings" }
alloy-provider = { version = "0.1.0", default-features = false, path = "crates/provider" }
alloy-pubsub = { version = "0.1.0", default-features = false, path = "crates/pubsub" }
alloy-rpc-client = { version = "0.1.0", default-features = false, path = "crates/rpc-client" }
alloy-rpc-types-engine = { version = "0.1.0", default-features = false, path = "crates/rpc-types-engine" }
alloy-rpc-types-anvil = { version = "0.1.0", default-features = false, path = "crates/rpc-types-anvil" }
alloy-rpc-types-trace = { version = "0.1.0", default-features = false, path = "crates/rpc-types-trace" }
alloy-rpc-types = { version = "0.1.0", default-features = false, path = "crates/rpc-types" }
alloy-serde = { version = "0.1.0", default-features = false, path = "crates/serde" }
alloy-signer = { version = "0.1.0", default-features = false, path = "crates/signer" }
alloy-signer-aws = { version = "0.1.0", default-features = false, path = "crates/signer-aws" }
alloy-signer-gcp = { version = "0.1.0", default-features = false, path = "crates/signer-gcp" }
alloy-signer-ledger = { version = "0.1.0", default-features = false, path = "crates/signer-ledger" }
alloy-signer-trezor = { version = "0.1.0", default-features = false, path = "crates/signer-trezor" }
alloy-signer-wallet = { version = "0.1.0", default-features = false, path = "crates/signer-wallet" }
alloy-transport = { version = "0.1.0", default-features = false, path = "crates/transport" }
alloy-transport-http = { version = "0.1.0", default-features = false, path = "crates/transport-http" }
alloy-transport-ipc = { version = "0.1.0", default-features = false, path = "crates/transport-ipc" }
alloy-transport-ws = { version = "0.1.0", default-features = false, path = "crates/transport-ws" }

test-utils = { version = "0.1.0", default-features = false, path = "crates/internal-test-utils", package = "alloy-internal-test-utils" }

alloy-core = { version = "0.7.0", default-features = false }
alloy-dyn-abi = { version = "0.7.0", default-features = false }
alloy-json-abi = { version = "0.7.0", default-features = false }
alloy-primitives = { version = "0.7.0", default-features = false }
alloy-sol-types = { version = "0.7.0", default-features = false }

alloy-rlp = { version = "0.3", default-features = false }

# ethereum
ethereum_ssz_derive = "0.5"
ethereum_ssz = "0.5"

# crypto
c-kzg = { version = "1.0", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
spki = { version = "0.7", default-features = false }

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
home = "0.5"
itertools = "0.12"
once_cell = { version = "1.19", default-features = false }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
semver = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"
url = "2.5"
derive_more = "0.99.17"

## serde
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

## misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
proptest = "1.4"
proptest-derive = "0.4"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.10"
