[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.81"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy"
repository = "https://github.com/alloy-rs/alloy"
exclude = ["benches/", "tests/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# seismic dependencies
tee_service_api = { git = "ssh://git@github.com/SeismicSystems/TEEService.git", package = "tee_service_api", rev = "21218a3" }

alloy-consensus = { version = "0.8", path = "crates/consensus", default-features = false }
alloy-consensus-any = { version = "0.8", path = "crates/consensus-any", default-features = false }
alloy-contract = { version = "0.8", path = "crates/contract", default-features = false }
alloy-eips = { version = "0.8", path = "crates/eips", default-features = false }
alloy-eip7547 = { version = "0.8", path = "crates/eip7547", default-features = false }
alloy-genesis = { version = "0.8", path = "crates/genesis", default-features = false }
alloy-json-rpc = { version = "0.8", path = "crates/json-rpc", default-features = false }
alloy-network = { version = "0.8", path = "crates/network", default-features = false }
alloy-network-primitives = { version = "0.8", path = "crates/network-primitives", default-features = false }
alloy-node-bindings = { version = "0.8", path = "crates/node-bindings", default-features = false }
alloy-provider = { version = "0.8", path = "crates/provider", default-features = false }
alloy-pubsub = { version = "0.8", path = "crates/pubsub", default-features = false }
alloy-rpc-client = { version = "0.8", path = "crates/rpc-client", default-features = false }
alloy-rpc-types-admin = { version = "0.8", path = "crates/rpc-types-admin", default-features = false }
alloy-rpc-types-anvil = { version = "0.8", path = "crates/rpc-types-anvil", default-features = false }
alloy-rpc-types-any = { version = "0.8", path = "crates/rpc-types-any", default-features = false }
alloy-rpc-types-beacon = { version = "0.8", path = "crates/rpc-types-beacon", default-features = false }
alloy-rpc-types-debug = { version = "0.8", path = "crates/rpc-types-debug", default-features = false }
alloy-rpc-types-engine = { version = "0.8", path = "crates/rpc-types-engine", default-features = false }
alloy-rpc-types-eth = { version = "0.8", path = "crates/rpc-types-eth", default-features = false }
alloy-rpc-types-mev = { version = "0.8", path = "crates/rpc-types-mev", default-features = false }
alloy-rpc-types-trace = { version = "0.8", path = "crates/rpc-types-trace", default-features = false }
alloy-rpc-types-txpool = { version = "0.8", path = "crates/rpc-types-txpool", default-features = false }
alloy-rpc-types = { version = "0.8", path = "crates/rpc-types", default-features = false }
alloy-serde = { version = "0.8", path = "crates/serde", default-features = false }
alloy-signer = { version = "0.8", path = "crates/signer", default-features = false }
alloy-signer-aws = { version = "0.8", path = "crates/signer-aws", default-features = false }
alloy-signer-gcp = { version = "0.8", path = "crates/signer-gcp", default-features = false }
alloy-signer-ledger = { version = "0.8", path = "crates/signer-ledger", default-features = false }
alloy-signer-local = { version = "0.8", path = "crates/signer-local", default-features = false }
alloy-signer-trezor = { version = "0.8", path = "crates/signer-trezor", default-features = false }
alloy-transport = { version = "0.8", path = "crates/transport", default-features = false }
alloy-transport-http = { version = "0.8", path = "crates/transport-http", default-features = false }
alloy-transport-ipc = { version = "0.8", path = "crates/transport-ipc", default-features = false }
alloy-transport-ws = { version = "0.8", path = "crates/transport-ws", default-features = false }
alloy-eip5792 = { version = "0.8", path = "crates/eip5792", default-features = false }

alloy-core = { version = "0.8.15", default-features = false }
alloy-dyn-abi = { version = "0.8.15", default-features = false }
alloy-json-abi = { version = "0.8.15", default-features = false }
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-sol-types = { version = "0.8.15", default-features = false }

alloy-rlp = { version = "0.3.9", default-features = false }
alloy-trie = { version = "0.7.6", default-features = false }

alloy-chains = { version = "=0.1.52", default-features = false }

# eips
alloy-eip2930 = { version = "0.1.0", default-features = false }
alloy-eip7702 = { version = "0.4.1", default-features = false }

# ethereum
ethereum_ssz_derive = "0.8"
ethereum_ssz = "0.8"

# crypto
c-kzg = { version = "1.0", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
spki = { version = "0.7", default-features = false }

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"
wasmtimer = "0.4.0"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
] }
tokio-test = "0.4"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
cfg-if = "1"
derive_more = { version = "1.0.0", default-features = false }
home = "0.5"
http = "1.1.0"
itertools = { version = "0.13", default-features = false }
jsonwebtoken = "9.3.0"
lru = "0.12"
once_cell = { version = "1.19", default-features = false }
parking_lot = "0.12.3"
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
schnellru = "0.2.3"
semver = "1.0"
strum = { version = "0.26", default-features = false }
thiserror = { version = "2.0", default-features = false }
url = "2.5"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
ci_info = "0.14.14"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.10"
tower-http = "0.6.1"

[patch.crates-io]
alloy-primitives = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-json-abi = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-sol-macro-expander = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-sol-macro-input = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-sol-types = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-sol-type-parser = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
alloy-dyn-abi = { git = "ssh://git@github.com/SeismicSystems/seismic-alloy-core.git", rev = "6e1c0e9" }
