[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
rust-version = "1.88"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy"
repository = "https://github.com/alloy-rs/alloy"
exclude = ["benches/", "tests/", "testdata/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"
large-enum-variant = "allow"
result-large-err = "allow"

[workspace.dependencies]
alloy-consensus = { version = "1.3.0", path = "crates/consensus", default-features = false }
alloy-consensus-any = { version = "1.3.0", path = "crates/consensus-any", default-features = false }
alloy-contract = { version = "1.3.0", path = "crates/contract", default-features = false }
alloy-eips = { version = "1.3.0", path = "crates/eips", default-features = false }
alloy-ens = { version = "1.3.0", path = "crates/ens", default-features = false }
alloy-eip7547 = { version = "1.3.0", path = "crates/eip7547", default-features = false }
alloy-genesis = { version = "1.3.0", path = "crates/genesis", default-features = false }
alloy-json-rpc = { version = "1.3.0", path = "crates/json-rpc", default-features = false }
alloy-network = { version = "1.3.0", path = "crates/network", default-features = false }
alloy-network-primitives = { version = "1.3.0", path = "crates/network-primitives", default-features = false }
alloy-node-bindings = { version = "1.3.0", path = "crates/node-bindings", default-features = false }
alloy-provider = { version = "1.3.0", path = "crates/provider", default-features = false }
alloy-pubsub = { version = "1.3.0", path = "crates/pubsub", default-features = false }
alloy-rpc-client = { version = "1.3.0", path = "crates/rpc-client", default-features = false }
alloy-rpc-types-admin = { version = "1.3.0", path = "crates/rpc-types-admin", default-features = false }
alloy-rpc-types-anvil = { version = "1.3.0", path = "crates/rpc-types-anvil", default-features = false }
alloy-rpc-types-any = { version = "1.3.0", path = "crates/rpc-types-any", default-features = false }
alloy-rpc-types-beacon = { version = "1.3.0", path = "crates/rpc-types-beacon", default-features = false }
alloy-rpc-types-debug = { version = "1.3.0", path = "crates/rpc-types-debug", default-features = false }
alloy-rpc-types-engine = { version = "1.3.0", path = "crates/rpc-types-engine", default-features = false }
alloy-rpc-types-eth = { version = "1.3.0", path = "crates/rpc-types-eth", default-features = false }
alloy-rpc-types-mev = { version = "1.3.0", path = "crates/rpc-types-mev", default-features = false }
alloy-rpc-types-tenderly = { version = "1.3.0", path = "crates/rpc-types-tenderly", default-features = false }
alloy-rpc-types-trace = { version = "1.3.0", path = "crates/rpc-types-trace", default-features = false }
alloy-rpc-types-txpool = { version = "1.3.0", path = "crates/rpc-types-txpool", default-features = false }
alloy-rpc-types = { version = "1.3.0", path = "crates/rpc-types", default-features = false }
alloy-serde = { version = "1.3.0", path = "crates/serde", default-features = false }
alloy-signer = { version = "1.3.0", path = "crates/signer", default-features = false }
alloy-signer-aws = { version = "1.3.0", path = "crates/signer-aws", default-features = false }
alloy-signer-gcp = { version = "1.3.0", path = "crates/signer-gcp", default-features = false }
alloy-signer-ledger = { version = "1.3.0", path = "crates/signer-ledger", default-features = false }
alloy-signer-local = { version = "1.3.0", path = "crates/signer-local", default-features = false }
alloy-signer-trezor = { version = "1.3.0", path = "crates/signer-trezor", default-features = false }
alloy-signer-turnkey = { version = "1.3.0", path = "crates/signer-turnkey", default-features = false }
alloy-transport = { version = "1.3.0", path = "crates/transport", default-features = false }
alloy-transport-http = { version = "1.3.0", path = "crates/transport-http", default-features = false }
alloy-transport-ipc = { version = "1.3.0", path = "crates/transport-ipc", default-features = false }
alloy-transport-ws = { version = "1.3.0", path = "crates/transport-ws", default-features = false }
alloy-eip5792 = { version = "1.3.0", path = "crates/eip5792", default-features = false }
alloy-tx-macros = { version = "1.3.0", path = "crates/tx-macros", default-features = false }

alloy-core = { version = "1.4.1", default-features = false }
alloy-dyn-abi = { version = "1.4.1", default-features = false }
alloy-json-abi = { version = "1.4.1", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-sol-types = { version = "1.4.1", default-features = false }

alloy-rlp = { version = "0.3.9", default-features = false }
alloy-trie = { version = "0.9.2", default-features = false }

alloy-chains = { version = "0.2", default-features = false }

# eips
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-eip2930 = { version = "0.2.3", default-features = false }
alloy-eip7702 = { version = "0.6.3", default-features = false }

# hardforks
alloy-hardforks = "0.2.0"

# ethereum
ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"

# crypto
c-kzg = { version = "2.1.1", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
secp256k1 = { version = "0.30", default-features = false }
spki = { version = "0.7", default-features = false }
zeroize = { version = "1.8.1", default-features = false }

# async
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-utils-wasm = "0.1"
wasmtimer = "0.4.0"

gcloud-sdk = "0.27.4"
hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
hyper-tls = "0.6.0"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# serde
serde = { version = "1.0.226", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }

# bincode
bincode = "2.0"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
borsh = { version = "1.5", default-features = false }
derive_more = { version = "2", default-features = false }
either = { version = "1.15", default-features = false }
http = "1.1.0"
itertools = { version = ">=0.13, <=0.14", default-features = false }
jsonwebtoken = "9.3.0"
lru = "0.13"
once_cell = { version = "1.21", default-features = false }
parking_lot = "0.12.3"
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
semver = "1.0"
strum = { version = "0.27", default-features = false }
thiserror = { version = "2.0", default-features = false }
url = "2.5"
jsonrpsee = { version = "0.25", default-features = false }
jsonrpsee-types = "0.25"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
ci_info = "0.14.14"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.20"
tower-http = "0.6.1"
